test/corpus/select.txt
================================================================================
Select 1
================================================================================

SELECT 1;

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          (literal))))))

================================================================================
Select aliased literals
================================================================================

SELECT 1 AS one,
  TRUE AS two,
  NULL AS three;

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          value: (literal)
          (keyword_as)
          alias: (identifier))
        (term
          value: (literal
            (keyword_true))
          (keyword_as)
          alias: (identifier))
        (term
          value: (literal
            (keyword_null))
          (keyword_as)
          alias: (identifier))))))

================================================================================
Simple select
================================================================================

SELECT * FROM my_table;

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          value: (all_fields))))
    (from
      (keyword_from)
      (relation
        (object_reference
          name: (identifier))))))

================================================================================
Simple select with ONLY
================================================================================

SELECT * FROM ONLY my_table;

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          value: (all_fields))))
    (from
      (keyword_from)
      (keyword_only)
      (relation
        (object_reference
          name: (identifier))))))

================================================================================
Table.*
================================================================================

SELECT my_table.* FROM my_table;

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          value: (all_fields
            (object_reference
              name: (identifier))))))
    (from
      (keyword_from)
      (relation
        (object_reference
          name: (identifier))))))

================================================================================
Alias.*
================================================================================

SELECT t.* FROM my_table AS t;

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          value: (all_fields
            (object_reference
              name: (identifier))))))
    (from
      (keyword_from)
      (relation
        (object_reference
          name: (identifier))
        (keyword_as)
        alias: (identifier)))))

================================================================================
Simple select with fields
================================================================================

SELECT id, name FROM my_table;

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          value: (field
            name: (identifier)))
        (term
          value: (field
            name: (identifier)))))
    (from
      (keyword_from)
      (relation
        (object_reference
          name: (identifier))))))

================================================================================
Simple select with fields that look like keywords
================================================================================

SELECT t.from_where, t.created_at, t.updated_at
FROM join_something_on AS where_this_like_that;

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          value: (field
            (object_reference
              name: (identifier))
            name: (identifier)))
        (term
          value: (field
            (object_reference
              name: (identifier))
            name: (identifier)))
        (term
          value: (field
            (object_reference
              name: (identifier))
            name: (identifier)))))
    (from
      (keyword_from)
      (relation
        (object_reference
          name: (identifier))
        (keyword_as)
        alias: (identifier)))))

================================================================================
Simple select with fields field table alias
================================================================================

SELECT m.id, m.name
FROM my_table m;

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          value: (field
            (object_reference
              name: (identifier))
            name: (identifier)))
        (term
          value: (field
            (object_reference
              name: (identifier))
            name: (identifier)))))
    (from
      (keyword_from)
      (relation
        (object_reference
          name: (identifier))
        alias: (identifier)))))

================================================================================
Simple select with aliased table and column name using double quotes
================================================================================

SELECT "My Table".name as "My Name"
FROM my_table "My Table";

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          value: (field
            (object_reference
              name: (identifier))
            name: (identifier))
          (keyword_as)
          alias: (identifier))))
    (from
      (keyword_from)
      (relation
        (object_reference
          name: (identifier))
        alias: (identifier)))))

================================================================================
Select with quoted column
================================================================================

SELECT tab."COL" FROM tab;

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          value: (field
            (object_reference
              name: (identifier))
            name: (identifier)))))
    (from
      (keyword_from)
      (relation
        (object_reference
          name: (identifier))))))

================================================================================
Simple select with where
================================================================================

SELECT id
FROM my_table
WHERE id = 4;

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          value: (field
            name: (identifier)))))
    (from
      (keyword_from)
      (relation
        (object_reference
          name: (identifier)))
      (where
        (keyword_where)
        predicate: (binary_expression
          left: (field
            name: (identifier))
          right: (literal))))))

================================================================================
Simple select with where and string
================================================================================

SELECT id
FROM my_table
WHERE id = "abc";

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          value: (field
            name: (identifier)))))
    (from
      (keyword_from)
      (relation
        (object_reference
          name: (identifier)))
      (where
        (keyword_where)
        predicate: (binary_expression
          left: (field
            name: (identifier))
          right: (literal))))))

================================================================================
Simple select with IN
================================================================================

SELECT id
FROM my_table
WHERE id IN(1,2);

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          value: (field
            name: (identifier)))))
    (from
      (keyword_from)
      (relation
        (object_reference
          name: (identifier)))
      (where
        (keyword_where)
        predicate: (binary_expression
          left: (field
            name: (identifier))
          operator: (keyword_in)
          right: (list
            (literal)
            (literal)))))))

================================================================================
Simple select with NOT IN
================================================================================

SELECT id
FROM my_table
WHERE id NOT IN(1,2);

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          value: (field
            name: (identifier)))))
    (from
      (keyword_from)
      (relation
        (object_reference
          name: (identifier)))
      (where
        (keyword_where)
        predicate: (binary_expression
          left: (field
            name: (identifier))
          operator: (not_in
            (keyword_not)
            (keyword_in))
          right: (list
            (literal)
            (literal)))))))

================================================================================
Simple select with more NOT INs
================================================================================

SELECT id
FROM my_table
WHERE id NOT IN(1,2) AND id NOT IN (SELECT id FROM other_table);

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          value: (field
            name: (identifier)))))
    (from
      (keyword_from)
      (relation
        (object_reference
          name: (identifier)))
      (where
        (keyword_where)
        predicate: (binary_expression
          left: (binary_expression
            left: (field
              name: (identifier))
            operator: (not_in
              (keyword_not)
              (keyword_in))
            right: (list
              (literal)
              (literal)))
          operator: (keyword_and)
          right: (binary_expression
            left: (field
              name: (identifier))
            operator: (not_in
              (keyword_not)
              (keyword_in))
            right: (subquery
              (select
                (keyword_select)
                (select_expression
                  (term
                    value: (field
                      name: (identifier)))))
              (from
                (keyword_from)
                (relation
                  (object_reference
                    name: (identifier)))))))))))

================================================================================
Simple select with IF
================================================================================

SELECT IF(m.is_published, 'global', 'local') as published_scope
FROM my_table m;

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          value: (invocation
            (object_reference
              name: (identifier))
            parameter: (term
              value: (field
                (object_reference
                  name: (identifier))
                name: (identifier)))
            parameter: (term
              value: (literal))
            parameter: (term
              value: (literal)))
          (keyword_as)
          alias: (identifier))))
    (from
      (keyword_from)
      (relation
        (object_reference
          name: (identifier))
        alias: (identifier)))))

================================================================================
Select with complex IF
================================================================================

SELECT m.is_published, IF(m.is_published > 4, 'global', 'local') published_scope
FROM my_table m;

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          value: (field
            (object_reference
              name: (identifier))
            name: (identifier)))
        (term
          value: (invocation
            (object_reference
              name: (identifier))
            parameter: (term
              value: (binary_expression
                left: (field
                  (object_reference
                    name: (identifier))
                  name: (identifier))
                right: (literal)))
            parameter: (term
              value: (literal))
            parameter: (term
              value: (literal)))
          alias: (identifier))))
    (from
      (keyword_from)
      (relation
        (object_reference
          name: (identifier))
        alias: (identifier)))))

================================================================================
Select with distinct without parenthesis
================================================================================

SELECT DISTINCT id
FROM my_table;

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (keyword_distinct)
      (select_expression
        (term
          value: (field
            name: (identifier)))))
    (from
      (keyword_from)
      (relation
        (object_reference
          name: (identifier))))))

================================================================================
Select with count and distinct without parenthesis and alias
================================================================================

SELECT COUNT(DISTINCT id) AS count
FROM my_table;

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          value: (invocation
            (object_reference
              name: (identifier))
            (keyword_distinct)
            parameter: (term
              value: (field
                name: (identifier))))
          (keyword_as)
          alias: (identifier))))
    (from
      (keyword_from)
      (relation
        (object_reference
          name: (identifier))))))

================================================================================
Simple select with AS
================================================================================

SELECT m.id AS m_id, m.a_id a_id
FROM my_table AS m;

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          value: (field
            (object_reference
              name: (identifier))
            name: (identifier))
          (keyword_as)
          alias: (identifier))
        (term
          value: (field
            (object_reference
              name: (identifier))
            name: (identifier))
          alias: (identifier))))
    (from
      (keyword_from)
      (relation
        (object_reference
          name: (identifier))
        (keyword_as)
        alias: (identifier)))))

================================================================================
Simple select with order by
================================================================================

SELECT id
FROM my_table
WHERE id > 4
ORDER BY id DESC;

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          value: (field
            name: (identifier)))))
    (from
      (keyword_from)
      (relation
        (object_reference
          name: (identifier)))
      (where
        (keyword_where)
        predicate: (binary_expression
          left: (field
            name: (identifier))
          right: (literal)))
      (order_by
        (keyword_order)
        (keyword_by)
        (order_target
          (field
            name: (identifier))
          (direction
            (keyword_desc)))))))

================================================================================
Simple select with limit
================================================================================

SELECT id
FROM my_table
LIMIT 5;

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          value: (field
            name: (identifier)))))
    (from
      (keyword_from)
      (relation
        (object_reference
          name: (identifier)))
      (limit
        (keyword_limit)
        (literal)))))

================================================================================
Simple select with offset
================================================================================

SELECT id
FROM my_table
LIMIT 5
OFFSET 40;

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          value: (field
            name: (identifier)))))
    (from
      (keyword_from)
      (relation
        (object_reference
          name: (identifier)))
      (limit
        (keyword_limit)
        (literal)
        (offset
          (keyword_offset)
          (literal))))))

================================================================================
Simple select with schema
================================================================================

SELECT * FROM my_schema.my_table;

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          value: (all_fields))))
    (from
      (keyword_from)
      (relation
        (object_reference
          schema: (identifier)
          name: (identifier))))))

================================================================================
Simple select with schema and fully-qualified *
================================================================================

SELECT
  my_schema.my_table.*
FROM
  my_schema.my_table;

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          value: (all_fields
            (object_reference
              schema: (identifier)
              name: (identifier))))))
    (from
      (keyword_from)
      (relation
        (object_reference
          schema: (identifier)
          name: (identifier))))))

================================================================================
Simple select with schema and fully-pathed fields
================================================================================

SELECT
  my_schema.my_table.my_field
FROM
  my_schema.my_table;

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          value: (field
            (object_reference
              schema: (identifier)
              name: (identifier))
            name: (identifier)))))
    (from
      (keyword_from)
      (relation
        (object_reference
          schema: (identifier)
          name: (identifier))))))

================================================================================
Distinct
================================================================================

SELECT DISTINCT(id)
FROM my_table;
--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (keyword_distinct)
      (select_expression
        (term
          value: (field
            name: (identifier)))))
    (from
      (keyword_from)
      (relation
        (object_reference
          name: (identifier))))))

================================================================================
Distinct, no extra parens
================================================================================

SELECT DISTINCT id
FROM my_table;
--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (keyword_distinct)
      (select_expression
        (term
          value: (field
            name: (identifier)))))
    (from
      (keyword_from)
      (relation
        (object_reference
          name: (identifier))))))

================================================================================
Distinct in count function
================================================================================

SELECT COUNT(DISTINCT(id))
FROM my_table;
--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          value: (invocation
            (object_reference
              name: (identifier))
            (keyword_distinct)
            parameter: (term
              value: (field
                name: (identifier)))))))
    (from
      (keyword_from)
      (relation
        (object_reference
          name: (identifier))))))

================================================================================
COUNT *
================================================================================

SELECT COUNT(*)
FROM my_table;
--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          value: (invocation
            (object_reference
              name: (identifier))
            parameter: (term
              value: (all_fields))))))
    (from
      (keyword_from)
      (relation
        (object_reference
          name: (identifier))))))

================================================================================
Distinct in count function, no extra parens
================================================================================

SELECT COUNT(DISTINCT id)
FROM my_table;
--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          value: (invocation
            (object_reference
              name: (identifier))
            (keyword_distinct)
            parameter: (term
              value: (field
                name: (identifier)))))))
    (from
      (keyword_from)
      (relation
        (object_reference
          name: (identifier))))))

================================================================================
Joins
================================================================================

SELECT a.id, b.id
FROM my_table a
JOIN my_other_table b
ON a.id = b.a_id
WHERE b.c_id = 4;

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          value: (field
            (object_reference
              name: (identifier))
            name: (identifier)))
        (term
          value: (field
            (object_reference
              name: (identifier))
            name: (identifier)))))
    (from
      (keyword_from)
      (relation
        (object_reference
          name: (identifier))
        alias: (identifier))
      (join
        (keyword_join)
        (relation
          (object_reference
            name: (identifier))
          alias: (identifier))
        (keyword_on)
        predicate: (binary_expression
          left: (field
            (object_reference
              name: (identifier))
            name: (identifier))
          right: (field
            (object_reference
              name: (identifier))
            name: (identifier))))
      (where
        (keyword_where)
        predicate: (binary_expression
          left: (field
            (object_reference
              name: (identifier))
            name: (identifier))
          right: (literal))))))

================================================================================
Join with boolean
================================================================================

SELECT *
FROM my_table
JOIN my_other_table ON TRUE;

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          value: (all_fields))))
    (from
      (keyword_from)
      (relation
        (object_reference
          name: (identifier)))
      (join
        (keyword_join)
        (relation
          (object_reference
            name: (identifier)))
        (keyword_on)
        predicate: (literal
          (keyword_true))))))

================================================================================
Joins with hint
================================================================================

SELECT a.id, b.id
FROM my_table a
JOIN my_other_table b USE INDEX FOR JOIN (idx_a)
ON a.id = b.a_id;

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          value: (field
            (object_reference
              name: (identifier))
            name: (identifier)))
        (term
          value: (field
            (object_reference
              name: (identifier))
            name: (identifier)))))
    (from
      (keyword_from)
      (relation
        (object_reference
          name: (identifier))
        alias: (identifier))
      (join
        (keyword_join)
        (relation
          (object_reference
            name: (identifier))
          alias: (identifier))
        (index_hint
          (keyword_use)
          (keyword_index)
          (keyword_for)
          (keyword_join)
          index_name: (identifier))
        (keyword_on)
        predicate: (binary_expression
          left: (field
            (object_reference
              name: (identifier))
            name: (identifier))
          right: (field
            (object_reference
              name: (identifier))
            name: (identifier)))))))

================================================================================
Ignore index for join
================================================================================

SELECT 1
FROM my_table a
JOIN my_other_table b IGNORE INDEX FOR JOIN (idx_a)
ON a.id = b.a_id;

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          value: (literal))))
    (from
      (keyword_from)
      (relation
        (object_reference
          name: (identifier))
        alias: (identifier))
      (join
        (keyword_join)
        (relation
          (object_reference
            name: (identifier))
          alias: (identifier))
        (index_hint
          (keyword_ignore)
          (keyword_index)
          (keyword_for)
          (keyword_join)
          index_name: (identifier))
        (keyword_on)
        predicate: (binary_expression
          left: (field
            (object_reference
              name: (identifier))
            name: (identifier))
          right: (field
            (object_reference
              name: (identifier))
            name: (identifier)))))))

================================================================================
Joins with USING
================================================================================

SELECT a.id, b.id
FROM my_table a
JOIN my_other_table b USING (q, w);

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          value: (field
            (object_reference
              name: (identifier))
            name: (identifier)))
        (term
          value: (field
            (object_reference
              name: (identifier))
            name: (identifier)))))
    (from
      (keyword_from)
      (relation
        (object_reference
          name: (identifier))
        alias: (identifier))
      (join
        (keyword_join)
        (relation
          (object_reference
            name: (identifier))
          alias: (identifier))
        (keyword_using)
        (list
          (column
            (identifier))
          (column
            (identifier)))))))

================================================================================
Join a VALUES clause
================================================================================

SELECT *
FROM my_table
JOIN (VALUES (1, 2), (3, 4)) AS v (col1, col2) ON TRUE;

--------------------------------------------------------------------------------

(program
  (statement
    (select
      (keyword_select)
      (select_expression
        (term
          value: (all_fields))))
    (from
      (keyword_from)
      (relation
        (object_reference
          name: (identifier)))
      (join
        (keyword_join)
        (relation
          (values
            (keyword_values)
            (list
              (literal)
              (literal))
            (list
              (literal)
              (literal)))
          (keyword_as)
          alias: (identifier)
          (list
            (column
              (identifier))
            (column
              (identifier))))
        (keyword_on)
        predicate: (literal
          (keyword_true))))))

================================================================================
Specific Joins
================================================================================

SELECT table_a.id
FROM table_a a
LEFT JOIN table_b b
ON a.id = b.a_id
LEFT OUTER JOIN table_c c
ON a.id = c.a_id
RIGHT JOIN table_d d
ON a.id = d.d_id
RIGHT OUTER JOIN table_d d
ON a.id = d.d_id
INNER JOIN table_e e
ON a.id = e.e_id
FULL OUTER JOIN table_f f
ON a.id = f.f_id
FULL JOIN table_g g
ON a.id = g.g_id;

--------------------------------------------------------------------------------
